# rendering-engine-learning

./: .gitignore  CMakeLists.txt  README.md
application/: main.cpp
asset/twin-pots/: twin-pots.gltf
cmake/: package.cmake
core/: common.h  core.h  logging.h
graphics/: gltf_loader.cpp  gltf_loader.h  graphics.h
src/: main.cpp
